fixed swipe up/down on mobile

--- a/hand-of-cards.css
+++ b/hand-of-cards.css
@@ -10,6 +10,8 @@ html, body {
     margin: 0; 
     font-family: Arial, Helvetica, sans-serif;
     background-image: linear-gradient(180deg, #102010, #404060);
+    /* prevent chrome/android from reloading on swipe down */
+    overscroll-behavior: contain;
 }
 
 .app-container {
